--- a/Hospital/HospitalModel/HospitalModel.csproj
+++ b/Hospital/HospitalModel/HospitalModel.csproj
@@ -50,9 +50,13 @@
   <ItemGroup>
     <Compile Include="Medication.cs" />
     <Compile Include="MedicationRequest.cs" />
+    <Compile Include="Patient.cs" />
+    <Compile Include="Prescription.cs" />
     <Compile Include="PrescriptionMedication.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Request.cs" />
+    <Compile Include="Treatment.cs" />
+    <Compile Include="TreatmentPrescription.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
