--- a/Hospital/HospitalServiceDAL/HospitalServiceDAL.csproj
+++ b/Hospital/HospitalServiceDAL/HospitalServiceDAL.csproj
@@ -42,9 +42,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BindingModels\MedicationBindingModel.cs" />
-    <Compile Include="BindingModels\MedicationRequestBindingModelcs.cs" />
+    <Compile Include="BindingModels\MedicationRequestBindingModel.cs" />
+    <Compile Include="BindingModels\PatientBindingModel.cs" />
+    <Compile Include="BindingModels\PrescriptionBindingModel.cs" />
     <Compile Include="BindingModels\PrescriptionMedicationBindingModel.cs" />
     <Compile Include="BindingModels\RequestBindingModel.cs" />
+    <Compile Include="BindingModels\TreatmentBindingModel.cs" />
+    <Compile Include="BindingModels\TreatmentPrescriptionBindingModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
