--- a/Hospital/HospitalServiceDAL/HospitalServiceDAL.csproj
+++ b/Hospital/HospitalServiceDAL/HospitalServiceDAL.csproj
@@ -55,6 +55,10 @@
     <Compile Include="Interfaces\IPrescriptionService.cs" />
     <Compile Include="Interfaces\ITreatmentService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\MedicationRequestViewModel.cs" />
+    <Compile Include="ViewModels\MedicationViewModel.cs" />
+    <Compile Include="ViewModels\PrescriptionMedicationViewModel.cs" />
+    <Compile Include="ViewModels\RequestViewModel.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
