--- a/Hospital/HospitalClientView/Web.config
+++ b/Hospital/HospitalClientView/Web.config
@@ -24,4 +24,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="HospitalDBContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=HospitalDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
