--- a/Hospital/HospitalImplementations/HospitalImplementations.csproj
+++ b/Hospital/HospitalImplementations/HospitalImplementations.csproj
@@ -52,9 +52,10 @@
     <Compile Include="HospitalDBContext.cs" />
     <Compile Include="Implementations\MainClientServiceDB.cs" />
     <Compile Include="Implementations\PatientServiceDB.cs" />
-    <Compile Include="Migrations\201905211154587_FirstMigration.cs" />
-    <Compile Include="Migrations\201905211154587_FirstMigration.Designer.cs">
-      <DependentUpon>201905211154587_FirstMigration.cs</DependentUpon>
+    <Compile Include="Implementations\RequestServiceDB.cs" />
+    <Compile Include="Migrations\201905211516133_FirstMigration.cs" />
+    <Compile Include="Migrations\201905211516133_FirstMigration.Designer.cs">
+      <DependentUpon>201905211516133_FirstMigration.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -76,8 +77,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201905211154587_FirstMigration.resx">
-      <DependentUpon>201905211154587_FirstMigration.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201905211516133_FirstMigration.resx">
+      <DependentUpon>201905211516133_FirstMigration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
