--- a/Hospital/HospitalServiceDAL/HospitalServiceDAL.csproj
+++ b/Hospital/HospitalServiceDAL/HospitalServiceDAL.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Interfaces\IMedicationService.cs" />
     <Compile Include="Interfaces\IPatientService.cs" />
     <Compile Include="Interfaces\IPrescriptionService.cs" />
+    <Compile Include="Interfaces\IRequestService.cs" />
     <Compile Include="Interfaces\ITreatmentService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\MedicationRequestViewModel.cs" />
