--- a/Hospital/HospitalImplementations/HospitalImplementations.csproj
+++ b/Hospital/HospitalImplementations/HospitalImplementations.csproj
@@ -51,12 +51,13 @@
   <ItemGroup>
     <Compile Include="HospitalDBContext.cs" />
     <Compile Include="Implementations\MainClientServiceDB.cs" />
+    <Compile Include="Implementations\MedicationServiceDB.cs" />
     <Compile Include="Implementations\PatientServiceDB.cs" />
     <Compile Include="Implementations\PrescriptionServiceDB.cs" />
     <Compile Include="Implementations\RequestServiceDB.cs" />
-    <Compile Include="Migrations\201905211648080_FirstMigration.cs" />
-    <Compile Include="Migrations\201905211648080_FirstMigration.Designer.cs">
-      <DependentUpon>201905211648080_FirstMigration.cs</DependentUpon>
+    <Compile Include="Migrations\201905261128365_FirstMigration.cs" />
+    <Compile Include="Migrations\201905261128365_FirstMigration.Designer.cs">
+      <DependentUpon>201905261128365_FirstMigration.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -78,8 +79,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201905211648080_FirstMigration.resx">
-      <DependentUpon>201905211648080_FirstMigration.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201905261128365_FirstMigration.resx">
+      <DependentUpon>201905261128365_FirstMigration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
