--- a/Hospital/HospitalAdministrationView/HospitalAdministrationView.csproj
+++ b/Hospital/HospitalAdministrationView/HospitalAdministrationView.csproj
@@ -104,6 +104,12 @@
     <Compile Include="FormPrescriptions.Designer.cs">
       <DependentUpon>FormPrescriptions.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormRequest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormRequest.Designer.cs">
+      <DependentUpon>FormRequest.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormAuthorization.resx">
@@ -126,6 +132,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormPrescriptions.resx">
       <DependentUpon>FormPrescriptions.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormRequest.resx">
+      <DependentUpon>FormRequest.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
