--- a/Hospital/HospitalAdministrationView/HospitalAdministrationView.csproj
+++ b/Hospital/HospitalAdministrationView/HospitalAdministrationView.csproj
@@ -68,11 +68,11 @@
     <Compile Include="FormAuthorization.Designer.cs">
       <DependentUpon>FormAuthorization.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormMainAdmin.cs">
+    <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormMainAdmin.Designer.cs">
-      <DependentUpon>FormMainAdmin.cs</DependentUpon>
+    <Compile Include="FormMain.Designer.cs">
+      <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
     <Compile Include="FormMedications.cs">
       <SubType>Form</SubType>
@@ -115,8 +115,8 @@
     <EmbeddedResource Include="FormAuthorization.resx">
       <DependentUpon>FormAuthorization.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormMainAdmin.resx">
-      <DependentUpon>FormMainAdmin.cs</DependentUpon>
+    <EmbeddedResource Include="FormMain.resx">
+      <DependentUpon>FormMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormMedications.resx">
       <DependentUpon>FormMedications.cs</DependentUpon>
