--- a/Hospital/HospitalPatientView/HospitalPatientView.csproj
+++ b/Hospital/HospitalPatientView/HospitalPatientView.csproj
@@ -155,6 +155,7 @@
     <Compile Include="FormPrescriptions.aspx.designer.cs">
       <DependentUpon>FormPrescriptions.aspx</DependentUpon>
     </Compile>
+    <Compile Include="MailClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
