--- a/Hospital/HospitalImplementations/App.config
+++ b/Hospital/HospitalImplementations/App.config
@@ -7,6 +7,10 @@
   <connectionStrings>
     <add name="HospitalDBContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=HospitalDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <appSettings>
+    <add key="MailLogin" value="labwork15kafis@gmail.com" />
+    <add key="MailPassword" value="passlab15" />
+  </appSettings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
