--- a/Hospital/HospitalImplementations/HospitalImplementations.csproj
+++ b/Hospital/HospitalImplementations/HospitalImplementations.csproj
@@ -96,7 +96,7 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
