--- a/Hospital/HospitalPatientView/packages.config
+++ b/Hospital/HospitalPatientView/packages.config
@@ -3,6 +3,9 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.Report.Viewer" version="11.0.0.0" targetFramework="net461" />
+  <package id="Microsoft.ReportingServices.ReportViewerControl.WebForms" version="150.900.148" targetFramework="net461" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="Unity" version="5.10.3" targetFramework="net461" />
