--- a/Hospital/HospitalImplementations/HospitalImplementations.csproj
+++ b/Hospital/HospitalImplementations/HospitalImplementations.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -63,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HospitalDBContext.cs" />
+    <Compile Include="Implementations\BackUpServiceDB.cs" />
     <Compile Include="Implementations\MainServiceDB.cs" />
     <Compile Include="Implementations\MedicationServiceDB.cs" />
     <Compile Include="Implementations\PatientServiceDB.cs" />
