--- a/Hospital/HospitalServiceDAL/HospitalServiceDAL.csproj
+++ b/Hospital/HospitalServiceDAL/HospitalServiceDAL.csproj
@@ -52,6 +52,7 @@
     <Compile Include="BindingModels\RequestBindingModel.cs" />
     <Compile Include="BindingModels\TreatmentBindingModel.cs" />
     <Compile Include="BindingModels\TreatmentPrescriptionBindingModel.cs" />
+    <Compile Include="Interfaces\IBackUpService.cs" />
     <Compile Include="Interfaces\IMainService.cs" />
     <Compile Include="Interfaces\IMedicationService.cs" />
     <Compile Include="Interfaces\IPatientService.cs" />
@@ -60,10 +61,8 @@
     <Compile Include="Interfaces\IRequestService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\ReportViewModel.cs" />
-    <Compile Include="ViewModels\RequestLoadViewModel.cs" />
     <Compile Include="ViewModels\RequestMedicationViewModel.cs" />
     <Compile Include="ViewModels\MedicationViewModel.cs" />
-    <Compile Include="ViewModels\PatientTreatmentsViewModel.cs" />
     <Compile Include="ViewModels\PatientViewModel.cs" />
     <Compile Include="ViewModels\PrescriptionMedicationViewModel.cs" />
     <Compile Include="ViewModels\PrescriptionViewModel.cs" />
